--- a/style.css
+++ b/style.css
@@ -1,28 +1,8 @@
 body{
-  /* background-image: url(./resources/sea-540123.jpg); */
   background-color: #343148;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-.max-w-lg{
-  max-width: 32rem;
-}
-.max-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-.bg-white{
-  background-color: #ffffff;
-}
-.p-6{
-  padding: 1.5rem;
-}
-.rounded-md{
-  border-radius: 0.375rem;
-}
-.shadow-md {
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 h1{
   background: linear-gradient(90deg, #00ffff, #ff00c3);
@@ -46,3 +26,36 @@ h1{
   font-weight: 700; /* semibold */
   margin-bottom: 1rem; /* 16px */
 }
+
+@media (max-width: 720px) {
+  body{
+    background-color: white;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  h1{
+    background: linear-gradient(90deg, #00ffff, #ff00c3);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .custom-div {
+    max-width: 16rem; /* 512px */
+    margin-top: 1.5rem;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    padding: 2.5rem; /* 24px */
+    border-radius: 3.375rem; /* 6px */
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  }
+  .custom-text {
+    font-size: 0.5rem; /* 24px */
+    font-weight: 300; /* semibold */
+    margin-bottom: 0.5rem; /* 16px */
+  }
+  
+}
+ 
