small screen css

--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ h1{
   margin-bottom: 1rem; /* 16px */
 }
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   body{
-    background-color: white;
+    background-color: #343148;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -41,19 +41,19 @@ h1{
     -webkit-text-fill-color: transparent;
   }
   .custom-div {
-    max-width: 16rem; /* 512px */
-    margin-top: 1.5rem;
+    max-width: 22rem; /* 512px */
+    margin-top: 2.0rem;
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     background-color: #ffffff;
-    padding: 2.5rem; /* 24px */
+    padding: 3.0rem; /* 24px */
     border-radius: 3.375rem; /* 6px */
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   }
   .custom-text {
-    font-size: 0.5rem; /* 24px */
-    font-weight: 300; /* semibold */
+    font-size: 1.5rem; /* 24px */
+    font-weight: 450; /* semibold */
     margin-bottom: 0.5rem; /* 16px */
   }
   
